[gd_scene load_steps=8 format=2]

[ext_resource path="res://BlockDispenser.png" type="Texture" id=1]
[ext_resource path="res://BlockDispenser.gd" type="Script" id=2]
[ext_resource path="res://MoveableBlock.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Pressed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Unpressed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 2 )

[node name="BlockDispenser" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 14, 16 )
frames = SubResource( 3 )
animation = "Unpressed"

[node name="ButtonPressArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonPressArea"]
position = Vector2( 14, 30 )
shape = SubResource( 4 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
mode = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PoolVector2Array( 0, 0, 28, 0, 28, 23, 24, 23, 24, 29, 23, 29, 23, 28, 19, 28, 19, 30, 10, 30, 10, 28, 5, 28, 5, 29, 4, 29, 4, 23, 0, 23 )

[node name="MoveableBlockBody" parent="." instance=ExtResource( 3 )]
position = Vector2( 14, 40 )

[connection signal="body_entered" from="ButtonPressArea" to="." method="_on_ButtonPressArea_body_entered"]
[connection signal="body_exited" from="ButtonPressArea" to="." method="_on_ButtonPressArea_body_exited"]
